fix some ui on mobile device.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 html, body {
     width: 100%;
     box-sizing: border-box;
@@ -18,15 +21,14 @@ button, input, optgroup, select, textarea {
 }
 
 header {
-    /*position: fixed;
-    top: 0;
-    left: 0;*/
     width: 100%;
     z-index: 9999;
     padding: 30px 0;
     color: #fff;
     transition: all .7s;
     background: #000;
+    display: flex;
+    justify-content: space-between;
 }
 header h1 {
     padding: 0 10px;
@@ -35,10 +37,40 @@ header h1 {
 header h1 img {
     height: 60px;
 }
+header nav {
+    /*width: 100%;*/
+}
+header nav ul {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+}
+header nav ul li {
+    list-style-type: none;
+    padding: 5px 20px;
+}
+header nav ul li a {
+    color: rgba(255,255,255,1);
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: "Quicksand", Sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.3em;
+    letter-spacing: -1px;
+}
+header nav ul li a:hover {
+    color: rgba(244,113,24,1);
+}
+header .container {
+    display: flex;
+    justify-content: space-between;
+}
 
 .container {
     max-width: 1170px;
     margin: 0 auto;
+    width: 100%;
 }
 
 main {
@@ -53,7 +85,7 @@ main {
     text-align: center;
 }
 .about-top h6 {
-    color: #565656;
+    color: rgba(86,86,86,1);
     font-family: "Manrope", Sans-serif;
     font-size: 11px;
     font-weight: 700;
@@ -105,7 +137,7 @@ main {
     font-weight: 300;
     line-height: 1.6em;
     margin: 0;
-    color: #565656;
+    color: rgba(86,86,86,1);
     font-family: 'Poppins', sans-serif;
     padding-bottom: 30px;
 }
@@ -114,7 +146,7 @@ main {
 .whatWeDo {
     width: 100%;
     padding: 50px 0;
-    background-color: #EDEDED;
+    background-color: rgba(237,237,237,1);
 }
 
 
@@ -123,7 +155,7 @@ main {
     text-align: center;
 }
 .whatWeDo-top h6 {
-    color: #7A7A7A;
+    color: rgba(122,122,122,1);
     font-family: "Manrope", Sans-serif;
     font-size: 11px;
     font-weight: 700;
@@ -147,18 +179,19 @@ main {
     display: flex;
     justify-content: center;
     list-style-type: none;
+    flex-direction: row;
 }
 .whatWeDo-bottom ul li {
-    width: 25%;
     padding: 15px;
+    text-align: center;
 }
 .whatWeDo-bottom ul li i {
-    color: #CE4918;
+    color: rgba(206,73,24,1);
     font-size: 108px;
     padding-bottom: 10px;
 }
 .whatWeDo-bottom ul li h6 {
-    color: #222222;
+    color: rgba(34,34,34,1);
     font-family: "Manrope", Sans-serif;
     font-size: 22.5px;
     font-weight: 700;
@@ -172,7 +205,7 @@ main {
     line-height: 1.6em;
     line-height: inherit;
     margin: 0;
-    color: #565656;
+    color: rgba(86,86,86,1);
     font-family: 'Poppins', sans-serif;
     padding-bottom: 30px;
 }
@@ -181,7 +214,7 @@ main {
 .background-overlay {
     width: 100%;
     height: 100%;
-    background-color: #000000;
+    background-color: rgba(0,0,0,1);
     opacity: 0.84;
     transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
     top: 0;
@@ -190,7 +223,7 @@ main {
 }
 .nextProject {
     background-attachment: fixed;
-    background-color: #000000;
+    background-color: rgba(0,0,0,1);
     background-image: url(./images/architecture3-scaled-1.jpg);
     background-position: center center;
     background-size: cover;
@@ -204,7 +237,7 @@ main {
     position: relative;
 }
 .nextProject .content h6 {
-    color: #DCDA56;
+    color: rgba(220,218,86,1);
     font-family: "Manrope", Sans-serif;
     font-size: 11px;
     font-weight: 700;
@@ -213,7 +246,7 @@ main {
     line-height: 1.3em;
 }
 .nextProject .content h2 {
-    color: #FFFFFF;
+    color: rgba(255,255,255,1);
     font-family: "Manrope", Sans-serif;
     font-weight: 700;
     font-size: 54.5px;
@@ -221,7 +254,7 @@ main {
     letter-spacing: -1px;
 }
 .nextProject .content p {
-    color: #BDBDBD;
+    color: rgba(189,189,189,1);
     font-size: 17px;
     line-height: 1.65em;
     margin: 0;
@@ -231,21 +264,23 @@ main {
 
 
 footer {
-    background-color: #ededed;
+    background-color: rgba(237,237,237,1);
     transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;
     padding: 120px 0;
 }
 footer article {
     display: flex;
+    flex-direction: row;
 }
 footer section, footer aside {
     width: 50%;
+    box-sizing: border-box;
 }
 footer section {
     padding: 0 60px 0 15px;
 }
 footer h6 {
-    color: #000;
+    color: rgba(0,0,0,1);
     font-size: 11px;
     font-weight: 600;
     text-transform: uppercase;
@@ -255,7 +290,7 @@ footer h6 {
     margin-bottom: 10px;
 }
 footer h4 {
-    color: #000;
+    color: rgba(0,0,0,1);
     font-family: quicksand,Sans-serif;
     font-size: 35px;
     font-weight: 700;
@@ -265,7 +300,7 @@ footer h4 {
 }
 footer section p {
     margin: 0;
-    color: #565656;
+    color: rgba(86,86,86,1);
     font-family: poppins,sans-serif;
     font-size: 15px;
     font-weight: 300;
@@ -280,10 +315,11 @@ footer aside input, footer aside textarea {
     width: 100%;
     padding: 15px;
     background: 0 0;
-    border: 1px solid #ddd;
+    border: 1px solid rgba(221,221,221,1);
     font-family: poppins,sans-serif;
     font-size: 18px;
     font-weight: 400;
+    box-sizing: border-box;
 }
 footer aside textarea {
     overflow: auto;
@@ -295,13 +331,13 @@ footer aside button {
     position: relative;
     padding: 14px 35px;
     overflow: hidden;
-    border: 2px solid #1e1e1e;
+    border: 2px solid rgba(30,30,30,1);
     border-radius: 4px;
     background: 0 0;
     cursor: pointer;
-    background: #1e1e1e;
+    background: rgba(30,30,30,1);
     padding: 8px 35px;
-    color: #fff;
+    color: rgba(255,255,255,1);
     font-family: poppins,sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -325,11 +361,47 @@ footer aside button:after {
     /*background: #1e1e1e;*/
     -webkit-transition: all .6s cubic-bezier(.39,.58,.57,1);
     transition: all .6s cubic-bezier(.39,.58,.57,1);
-    background: #fff;
+    background: rgba(255,255,255,1);
 }
 footer aside button:hover:after {
     right: -10px;
 }
 footer aside button:hover span {
-    color: #1e1e1e;
+    color: rgba(30,30,30,1);
+}
+
+
+@media only screen and (max-width: 600px) {
+    header {
+        justify-content: center;
+    }
+    header .container {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    header h1 {
+        text-align: center;
+    }
+    header nav ul {
+        justify-content: center;
+    }
+    .whatWeDo-bottom ul {
+        flex-direction: column;
+    }
+    .nextProject .content {
+        width: 100%;
+        text-align: center;
+        padding: 0 20px;
+    }
+    footer article {
+        flex-direction: column;
+    }
+    footer section, footer aside {
+        width: 100%;
+        text-align: center;
+        padding: 0 20px;
+    }
+    footer aside {
+        padding-top: 150px;
+    }
 }
